# pinc-lang

./: .gitattributes  .gitignore  .ocamlformat  LICENSE  Makefile  README.md  TODO.md  bsconfig.json  dune  dune-project  dune-workspace  dune.bsb  esy.js.json  esy.json  pinc-lang-js.opam  pinc-lang-js.opam.template  pinc-lang.opam  pinc-lang.opam.locked  pinc-lang.opam.template
.github/workflows/: release.yaml  test.yaml
.melange.eobjs/: .bsbuild  .sourcedirs.json
benchmark/: benchmark.ml  dune
benchmark/data/: Benchmark.pi  Section.pi
esy.js.esy.lock/: index.json
esy.lock/: index.json
examples/components/: LanguageSwitcher.fe  LanguageSwitcher.pi  Reference.fe  Reference.pi  Section.fe  Section.pi  Teaser.fe  Teaser.pi
examples/context/: LanguageContext.fe  ThemeContext.fe
examples/pages/: Page.fe
examples/sites/: Default.fe  DocsSite.fe  MainSite.fe
examples/stores/: GlobalStore.fe
includes/: Base.pi
lang/: Ast.ml  Ast_Attr.ml  Ast_Declaration.ml  dune  lexer.mll  parser.mly
lib/: Ast.ml  Ast_Declaration.ml  Ast_Symbol.ml  Ast_Value.ml  Diagnostics.ml  HTML.ml  Interpreter.ml  Interpreter.mli  Lexer.ml  Parser.ml  Pinc.js  Pinc.ml  Pinc_Ast.js  Pinc_Ast.ml  Pinc_Diagnostics.js  Pinc_Diagnostics.ml  Pinc_HTML.js  Pinc_HTML.ml  Pinc_Interpreter.js  Pinc_Interpreter.ml  Pinc_Interpreter.mli  Pinc_Interpreter_Generic.js  Pinc_Interpreter_Generic.ml  Pinc_Interpreter_Types.ml  Pinc_Lexer.js  Pinc_Lexer.ml  Pinc_Lexer.mli  Pinc_Operators.js  Pinc_Operators.ml  Pinc_Parser.js  Pinc_Parser.ml  Pinc_Parser.mli  Pinc_Position.js  Pinc_Position.ml  Pinc_Position.mli  Pinc_Tags.js  Pinc_Tags.ml  Pinc_Tags.mli  Pinc_Token.js  Pinc_Token.ml  (+9 more)
lib/00_core/: Identifier.ml  Pinc_Core.ml  StdlibExtension.ml  StringMap.ml  StringSet.ml  dune
lib/00_source/: dune
lib/01_diagnostics/: Location.ml  Location.mli  Pinc_Diagnostics.ml  Pinc_Diagnostics.mli  Pinc_Position.ml  dune
lib/02_parsing/: Ast.ml  DependencyGraph.ml  DependencyGraph.mli  Helpers.ml  Lexer.ml  Lexer.mli  Operators.ml  Parser.ml  Parsetree.ml  Pinc_Parser.ml  Pinc_Parser.mli  StringMap.ml  Token.ml  Token.mli  Transformer.ml  Transformer.mli  Utils.ml  dune
lib/03_typing/: Environment.ml  Generalize.ml  Infer.ml  Pinc_Typer.ml  Substitution.ml  Typed_tree.ml  (+3 more)
lib/pinc_backend/: DeclarationEvaluator.ml  Externals.ml  HTML.mli  Helpers.ml  Interpreter.ml  Interpreter.mli  Pinc_HTML.ml  Pinc_Interpreter.ml  Pinc_Interpreter.mli  Pinc_Interpreter_Types.ml  Pinc_Typer.ml  Pinc_Typer.mli  State.ml  Tag.ml  Typer.ml  Typer.mli  Types.ml  Value.ml  Value_Constructors.ml  dune
lib/pinc_backend/Pinc_Interpreter/: Pinc_Interpreter.ml  Pinc_Interpreter.mli  State.ml  Tag.ml  Types.ml  Value.ml
lib/pinc_backend/stdlib/: Base.pi  Base__Array.pi  Base__Char.pi  Base__Fn.pi  Base__String.pi
test/: dune
(+147 files in other folders)
