(dirs *)

(library
 (name Pinc_Backend)
 (public_name pinc-lang.backend)
 (flags :standard -open Pinc_Core)
 (libraries
  unix
  Pinc_Core
  Pinc_Source
  Pinc_Diagnostics
  Pinc_Parser
  Pinc_Typer
  containers)
 (preprocess
  (pps ppx_deriving.show))
 (instrumentation
  (backend landmarks --auto)))
